# diagrammer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/API/: mod.rs
src/calculations/: mod.rs
src/graphics/: mod.rs
src/graphics/GUI/: mod.rs
src/graphics/bars/: mod.rs
src/graphics/borders/: mod.rs
src/graphics/numbers/: mod.rs
src/graphics/printing_error/: mod.rs
src/work_with_fs/: mod.rs
